fixed video list on mobile

--- a/assets/scss/components/videos/videos.scss
+++ b/assets/scss/components/videos/videos.scss
@@ -13,6 +13,10 @@
 
   margin-top: 32px;
   margin-bottom: 32px;
+
+  @media screen and (max-width: 768px) {
+    grid-template-columns: 1fr;
+  }
 }
 
 .video-card {
